# IteratedPrisonersDilemma

./: .gitignore  CMakeLists.txt  README.md  choice.cpp  choice.h  classes.cpp  classes.h  fileManager.cpp  fileManager.h  gameManager.cpp  gameManager.h  gtest_lite.h  main.cpp  memtrace.h  menu.cpp  menu.h  player.cpp  player.h  playerArray.cpp  playerArray.h  test.cpp  test.h
